# Sentinel-Iron

./: .gitignore  pyproject.toml
work/futures-bot/: .gitignore  CONTEXT.md  README.md  pyproject.toml
work/futures-bot/src/futures_bot/: cli.py
work/futures-bot/src/futures_bot/domain/: enums.py  (+4 more)
work/futures-bot/tests/: test_cli.py  test_package.py
work/futures-bot/tests/application/: test_broker_connection.py  test_kill_switch.py  test_kill_switch_enforcement.py  test_live_trading.py  test_margin_estimates.py  test_market_data_history.py  test_market_data_snapshot.py  test_order_activity.py  test_order_cancellation.py  test_order_gateway.py  test_order_planning.py  test_order_submission.py  test_order_updates.py  test_position_flattening.py  test_position_ledger.py  test_rebalance_execution.py  test_rebalance_phase_submission.py  test_rebalance_risk_context.py  test_reconciliation.py  test_risk_check.py
work/futures-bot/tests/brokers/: test_catalog.py  test_factory.py  test_ibkr_adapter.py  test_ibkr_config.py  test_ninjatrader_adapter.py  test_optimus_adapter.py  test_tradestation_adapter.py  test_tradovate_adapter.py  test_tradovate_config.py
work/futures-bot/tests/domain/: test_instruments.py  test_orders_portfolio.py
work/futures-bot/tests/market/: test_continuous.py
work/futures-bot/tests/portfolio/: test_position_sizing.py
work/futures-bot/tests/ports/: test_broker.py  test_market_data.py
work/futures-bot/tests/risk/: test_engine.py
work/futures-bot/tests/storage/: test_kill_switch_store.py  test_position_store.py  test_processed_fills_store.py
(+56 files in other folders)
