[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-iron"
version = "0.1.0"
description = "Production-oriented futures trading bot core."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ibkr = ["ibapi>=9.81.1.post1"]

[project.scripts]
sentinel-iron = "sentinel_iron.cli:main"
sentinel-iron-edge = "sentinel_iron.edge_worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
